--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <html lang="de">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<style>
+  * {
+    touch-action: manipulation;
+  }
+  button {
+    touch-action: manipulation;
+  }
+</style>
 <title>Maschinenzähler – v2.2.2 (Reset-Fix)</title>
 <meta name="color-scheme" content="light dark">
 <style>
